@@ -1,3 +1,8 @@
+2009-12-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * M4/*.m4 configure.ac
+    Rename custom M4 macros to MN_*.
+
 2009-12-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/sndfile-merge.c
